--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -91,10 +91,14 @@
      <Compile Include="Assets\Scripts\DT_Types\SO_Transform.cs" />
      <Compile Include="Assets\Scripts\DT_Types\SO_Vec3.cs" />
      <Compile Include="Assets\Scripts\Environment\EN_FieldGround.cs" />
+     <Compile Include="Assets\Scripts\FM_Editor\ED_FM_Grid.cs" />
+     <Compile Include="Assets\Scripts\FM_Editor\ED_FM_Man.cs" />
+     <Compile Include="Assets\Scripts\FM_Editor\ED_FM_Square.cs" />
      <Compile Include="Assets\Scripts\GameManagement\GM_Endzone.cs" />
      <Compile Include="Assets\Scripts\GameManagement\GM_Manager.cs" />
      <Compile Include="Assets\Scripts\GE_System\GE_Event.cs" />
      <Compile Include="Assets\Scripts\GE_System\GE_Listener.cs" />
+     <Compile Include="Assets\Scripts\IO_Formations.cs" />
      <Compile Include="Assets\Scripts\Menus\MN_Manager.cs" />
      <Compile Include="Assets\Scripts\Menus\MN_Play_LOAD.cs" />
      <Compile Include="Assets\Scripts\Menus\MN_PP_Dif.cs" />
@@ -184,6 +188,7 @@
      <Compile Include="Assets\Scripts\RouteEditor\ED_RT_Man.cs" />
      <Compile Include="Assets\Scripts\RouteEditor\ED_RT_Rt_Node.cs" />
      <Compile Include="Assets\Scripts\RouteEditor\ED_RT_Square.cs" />
+     <Compile Include="Assets\Scripts\RouteEditor\ED_RT_Trail.cs" />
      <Compile Include="Assets\Scripts\RoutePasser\CAM_Outro.cs" />
      <Compile Include="Assets\Scripts\RoutePasser\DATA_RP_Set.cs" />
      <Compile Include="Assets\Scripts\RoutePasser\IO_RP_Dif.cs" />
@@ -239,22 +244,27 @@
      <None Include="Assets\Settings\Settings.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Smash_01.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\sdf.txt" />
+     <None Include="Assets\FILE_IO\Routes\ShortSlant.txt" />
      <None Include="Assets\Plays\Routes\FlatR.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\whatevs.txt" />
      <None Include="Assets\Plays\Routes\Seam.txt" />
      <None Include="Assets\Plays\Routes\PostL.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Sail_02.txt" />
      <None Include="Assets\FILE_IO\PitchAndCatch\EASY3.txt" />
+     <None Include="Assets\FILE_IO\Routes\MidWheel.txt" />
      <None Include="Assets\Plays\Routes\SHitchL.txt" />
      <None Include="Assets\Plays\Routes\SlantL.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TestingAbain.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TESTINGBABY.txt" />
      <None Include="Assets\Plays\Routes\WeirdCross.txt" />
+     <None Include="Assets\FILE_IO\Routes\DeepPost.txt" />
      <None Include="Assets\Scripts\DT_Types\SO_Vec3.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Testd.txt" />
      <None Include="Assets\Plays\Routes\SlantR.txt" />
      <None Include="Assets\Plays\Routes\SCrossR.txt" />
      <None Include="Assets\Plays\Routes\OutR.txt" />
+     <None Include="Assets\FILE_IO\Routes\ShortIn.txt" />
+     <None Include="Assets\FILE_IO\Routes\MidHitch.txt" />
      <None Include="Assets\Plays\Priorities\Defenders.txt" />
      <None Include="Assets\Plays\Routes\SHitchR.txt" />
      <None Include="Assets\Plays\Priorities\Receivers.txt" />
@@ -263,21 +273,33 @@
      <None Include="Assets\FILE_IO\PocketPasser\EASY.txt" />
      <None Include="Assets\Plays\Routes\FlatL.txt" />
      <None Include="Assets\Plays\Routes\BSlantL.txt" />
+     <None Include="Assets\FILE_IO\Routes\DeepSlant.txt" />
      <None Include="Assets\Plays\Routes\ZagR.txt" />
      <None Include="Assets\FILE_IO\PocketPasser\PETERMAN.txt" />
      <None Include="Assets\Plays\Routes\Go.txt" />
      <None Include="Assets\FILE_IO\PitchAndCatch\EASY2.txt" />
+     <None Include="Assets\FILE_IO\Routes\MidPost.txt" />
+     <None Include="Assets\FILE_IO\Routes\MidIn.txt" />
+     <None Include="Assets\FILE_IO\Routes\MidOut.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Stick_02.txt" />
+     <None Include="Assets\FILE_IO\Routes\MidSlant.txt" />
      <None Include="Assets\PlaysText\defPlays.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Smash.txt" />
      <None Include="Assets\RoutesText\routes.txt" />
+     <None Include="Assets\FILE_IO\Routes\DeepCorner.txt" />
      <None Include="Assets\Plays\Routes\DCrossL.txt" />
      <None Include="Assets\ZonesText\zones.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Rando_01.txt" />
+     <None Include="Assets\FILE_IO\Routes\DeepHitch.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TestCov3Beat.txt" />
+     <None Include="Assets\FILE_IO\Routes\ShortCross.txt" />
+     <None Include="Assets\FILE_IO\Formations\TEST.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\RandoPlay.txt" />
      <None Include="Assets\Plays\Routes\BSlantR.txt" />
+     <None Include="Assets\FILE_IO\Routes\DeepIn.txt" />
+     <None Include="Assets\FILE_IO\Routes\ShortHitch.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\temptla.txt" />
+     <None Include="Assets\FILE_IO\Formations\TEST2.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Testasdlkfj.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TESTINGWhatevs.txt" />
      <None Include="Assets\FILE_IO\PocketPasser\HARD.txt" />
@@ -285,20 +307,27 @@
      <None Include="Assets\Plays\Routes\PostR.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Stick_03.txt" />
      <None Include="Assets\FILE_IO\PocketPasser\NORMAL.txt" />
+     <None Include="Assets\FILE_IO\Routes\DeepCross.txt" />
      <None Include="Assets\FILE_IO\PitchAndCatch\EASY4.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\adsfdas.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Smash2.txt" />
      <None Include="Assets\Plays\Routes\SeamR.txt" />
      <None Include="Assets\Plays\Routes\OutL.txt" />
+     <None Include="Assets\FILE_IO\Routes\DeepHook.txt" />
      <None Include="Assets\Plays\Routes\SCrossL.txt" />
      <None Include="Assets\Plays\Routes\MHitchL.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Stick_01.txt" />
      <None Include="Assets\FILE_IO\PitchAndCatch\EASY1.txt" />
+     <None Include="Assets\FILE_IO\Routes\DeepGo.txt" />
+     <None Include="Assets\FILE_IO\Routes\ShortFlat.txt" />
      <None Include="Assets\Plays\Routes\DCrossR.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\HB_Wheel.txt" />
      <None Include="Assets\Plays\Routes\Flat.txt" />
+     <None Include="Assets\FILE_IO\Routes\MidOutUp.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\HulkSmash.txt" />
+     <None Include="Assets\FILE_IO\Routes\MidHook.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Testsdl.txt" />
+     <None Include="Assets\FILE_IO\Routes\MidCross.txt" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>C:/Programming/SW_Quarterback/SW_Quarterback/SW_Football/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
