--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -90,15 +90,22 @@
      <Compile Include="Assets\Scripts\DT_Types\SO_Int.cs" />
      <Compile Include="Assets\Scripts\DT_Types\SO_Transform.cs" />
      <Compile Include="Assets\Scripts\DT_Types\SO_Vec3.cs" />
+     <Compile Include="Assets\Scripts\ED_OffensePlays\ED_OP_Grid.cs" />
+     <Compile Include="Assets\Scripts\ED_OffensePlays\ED_OP_Man.cs" />
+     <Compile Include="Assets\Scripts\ED_OffensePlays\ED_OP_Mark.cs" />
+     <Compile Include="Assets\Scripts\ED_OffensePlays\ED_OP_Ply.cs" />
+     <Compile Include="Assets\Scripts\ED_OffensePlays\ED_OP_Square.cs" />
      <Compile Include="Assets\Scripts\Environment\EN_FieldGround.cs" />
      <Compile Include="Assets\Scripts\FM_Editor\ED_FM_Grid.cs" />
      <Compile Include="Assets\Scripts\FM_Editor\ED_FM_Man.cs" />
+     <Compile Include="Assets\Scripts\FM_Editor\ED_FM_Ply.cs" />
      <Compile Include="Assets\Scripts\FM_Editor\ED_FM_Square.cs" />
      <Compile Include="Assets\Scripts\GameManagement\GM_Endzone.cs" />
      <Compile Include="Assets\Scripts\GameManagement\GM_Manager.cs" />
      <Compile Include="Assets\Scripts\GE_System\GE_Event.cs" />
      <Compile Include="Assets\Scripts\GE_System\GE_Listener.cs" />
      <Compile Include="Assets\Scripts\IO_Formations.cs" />
+     <Compile Include="Assets\Scripts\IO_OffensivePlays.cs" />
      <Compile Include="Assets\Scripts\Menus\MN_Manager.cs" />
      <Compile Include="Assets\Scripts\Menus\MN_Play_LOAD.cs" />
      <Compile Include="Assets\Scripts\Menus\MN_PP_Dif.cs" />
@@ -239,8 +246,10 @@
      <Compile Include="Assets\Scripts\Utilities\UT_Strings.cs" />
      <Compile Include="Assets\Scripts\Utilities\UT_VecConversion.cs" />
      <None Include="Assets\Plays\EditorCreatedPlays\Cover3Beater.txt" />
+     <None Include="Assets\FILE_IO\Formations\SaveTest.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\DoubleSmash.txt" />
      <None Include="Assets\Plays\Routes\MHitchR.txt" />
+     <None Include="Assets\FILE_IO\Formations\SHOT_311.txt" />
      <None Include="Assets\Settings\Settings.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Smash_01.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\sdf.txt" />
@@ -289,6 +298,7 @@
      <None Include="Assets\FILE_IO\Routes\DeepCorner.txt" />
      <None Include="Assets\Plays\Routes\DCrossL.txt" />
      <None Include="Assets\ZonesText\zones.txt" />
+     <None Include="Assets\FILE_IO\Formations\Default.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Rando_01.txt" />
      <None Include="Assets\FILE_IO\Routes\DeepHitch.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TestCov3Beat.txt" />
