--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -92,6 +92,7 @@
      <Compile Include="Assets\Scripts\DT_Types\SO_Vec3.cs" />
      <Compile Include="Assets\Scripts\ED_OffensePlays\ED_OP_GFX_Job.cs" />
      <Compile Include="Assets\Scripts\ED_OffensePlays\ED_OP_GFX_RT_ND.cs" />
+     <Compile Include="Assets\Scripts\ED_OffensePlays\ED_OP_GFX_RT_Trail.cs" />
      <Compile Include="Assets\Scripts\ED_OffensePlays\ED_OP_Grid.cs" />
      <Compile Include="Assets\Scripts\ED_OffensePlays\ED_OP_Man.cs" />
      <Compile Include="Assets\Scripts\ED_OffensePlays\ED_OP_Mark.cs" />
