--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -316,6 +316,7 @@
      <None Include="Assets\Plays\EditorCreatedPlays\Testasdlkfj.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TESTINGWhatevs.txt" />
      <None Include="Assets\FILE_IO\PocketPasser\HARD.txt" />
+     <None Include="Assets\FILE_IO\OffensivePlays\Sail.txt" />
      <None Include="Assets\FILE_IO\GamerInfo\info.txt" />
      <None Include="Assets\Plays\Routes\PostR.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Stick_03.txt" />
