--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -252,10 +252,10 @@
      <Compile Include="Assets\Scripts\Utilities\UT_Strings.cs" />
      <Compile Include="Assets\Scripts\Utilities\UT_VecConversion.cs" />
      <None Include="Assets\Plays\EditorCreatedPlays\Cover3Beater.txt" />
-     <None Include="Assets\FILE_IO\Formations\SaveTest.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\DoubleSmash.txt" />
      <None Include="Assets\Plays\Routes\MHitchR.txt" />
      <None Include="Assets\FILE_IO\Formations\SHOT_311.txt" />
+     <None Include="Assets\FILE_IO\Formations\SHOT_401_TripsRight.txt" />
      <None Include="Assets\Settings\Settings.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Smash_01.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\sdf.txt" />
@@ -265,11 +265,13 @@
      <None Include="Assets\Plays\Routes\Seam.txt" />
      <None Include="Assets\Plays\Routes\PostL.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Sail_02.txt" />
+     <None Include="Assets\FILE_IO\OffensivePlays\Curls02.txt" />
      <None Include="Assets\FILE_IO\PitchAndCatch\EASY3.txt" />
      <None Include="Assets\FILE_IO\Routes\MidWheel.txt" />
      <None Include="Assets\Plays\Routes\SHitchL.txt" />
      <None Include="Assets\Plays\Routes\SlantL.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TestingAbain.txt" />
+     <None Include="Assets\FILE_IO\OffensivePlays\Curls01.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TESTINGBABY.txt" />
      <None Include="Assets\Plays\Routes\WeirdCross.txt" />
      <None Include="Assets\FILE_IO\Routes\DeepPost.txt" />
@@ -294,6 +296,7 @@
      <None Include="Assets\Plays\Routes\Go.txt" />
      <None Include="Assets\FILE_IO\PitchAndCatch\EASY2.txt" />
      <None Include="Assets\FILE_IO\Routes\MidPost.txt" />
+     <None Include="Assets\FILE_IO\Formations\SHOT_311_Right.txt" />
      <None Include="Assets\FILE_IO\Routes\MidIn.txt" />
      <None Include="Assets\FILE_IO\Routes\MidOut.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Stick_02.txt" />
@@ -309,14 +312,12 @@
      <None Include="Assets\FILE_IO\Routes\DeepHitch.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TestCov3Beat.txt" />
      <None Include="Assets\FILE_IO\Routes\ShortCross.txt" />
-     <None Include="Assets\FILE_IO\Formations\TEST.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\RandoPlay.txt" />
      <None Include="Assets\Plays\Routes\BSlantR.txt" />
      <None Include="Assets\FILE_IO\Routes\DeepIn.txt" />
      <None Include="Assets\FILE_IO\Routes\ShortHitch.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\temptla.txt" />
      <None Include="Assets\FILE_IO\OffensivePlays\TestWrite.txt" />
-     <None Include="Assets\FILE_IO\Formations\TEST2.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Testasdlkfj.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TESTINGWhatevs.txt" />
      <None Include="Assets\FILE_IO\PocketPasser\HARD.txt" />
