--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -256,6 +256,7 @@
      <None Include="Assets\Plays\EditorCreatedPlays\DoubleSmash.txt" />
      <None Include="Assets\Plays\Routes\MHitchR.txt" />
      <None Include="Assets\Settings\Settings.txt" />
+     <None Include="Assets\FILE_IO\OffensivePlays\1-0_Scissors.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Smash_01.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\sdf.txt" />
      <None Include="Assets\FILE_IO\Routes\ShortSlant.txt" />
@@ -298,21 +299,26 @@
      <None Include="Assets\FILE_IO\Formations\1-1_Trips.txt" />
      <None Include="Assets\FILE_IO\PitchAndCatch\EASY2.txt" />
      <None Include="Assets\FILE_IO\Routes\MidPost.txt" />
+     <None Include="Assets\FILE_IO\OffensivePlays\1-1_ModifiedSmash.txt" />
      <None Include="Assets\FILE_IO\Routes\MidIn.txt" />
      <None Include="Assets\FILE_IO\Routes\MidOut.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Stick_02.txt" />
      <None Include="Assets\FILE_IO\Routes\MidSlant.txt" />
      <None Include="Assets\PlaysText\defPlays.txt" />
+     <None Include="Assets\FILE_IO\OffensivePlays\1-2_Sail.txt" />
      <None Include="Assets\FILE_IO\OffensivePlays\1-2_SkinnyPost.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Smash.txt" />
      <None Include="Assets\RoutesText\routes.txt" />
      <None Include="Assets\FILE_IO\Routes\DeepCorner.txt" />
+     <None Include="Assets\FILE_IO\OffensivePlays\1-2_DeepSeam.txt" />
      <None Include="Assets\Plays\Routes\DCrossL.txt" />
      <None Include="Assets\FILE_IO\OffensivePlays\1-2_TestSave.txt" />
      <None Include="Assets\ZonesText\zones.txt" />
      <None Include="Assets\FILE_IO\Formations\Default.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Rando_01.txt" />
+     <None Include="Assets\FILE_IO\OffensivePlays\1-1_Smash.txt" />
      <None Include="Assets\FILE_IO\OffensivePlays\Default.txt" />
+     <None Include="Assets\FILE_IO\OffensivePlays\1-1_Sail.txt" />
      <None Include="Assets\FILE_IO\Formations\1-2_Wide.txt" />
      <None Include="Assets\FILE_IO\Routes\DeepHitch.txt" />
      <None Include="Assets\FILE_IO\Formations\1-1_Default.txt" />
