--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -171,6 +171,7 @@
      <Compile Include="Assets\Scripts\Prac_Offense\PRAC_Off_Man.cs" />
      <Compile Include="Assets\Scripts\Prac_Offense\PRAC_Off_Ply.cs" />
      <Compile Include="Assets\Scripts\Prac_Offense\PRAC_Off_SetupPlayers.cs" />
+     <Compile Include="Assets\Scripts\Prac_Offense\PRAC_PB_UI.cs" />
      <Compile Include="Assets\Scripts\Practice\CAM_PlayShowing.cs" />
      <Compile Include="Assets\Scripts\Practice\DEF_ManLog.cs" />
      <Compile Include="Assets\Scripts\Practice\DEF_RushLog.cs" />
