--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -254,9 +254,11 @@
      <Compile Include="Assets\Scripts\Utilities\UT_Grounded.cs" />
      <Compile Include="Assets\Scripts\Utilities\UT_Strings.cs" />
      <Compile Include="Assets\Scripts\Utilities\UT_VecConversion.cs" />
+     <None Include="Assets\PLAYART_CREATION\OffensivePlays\1-1_Sail.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Cover3Beater.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\DoubleSmash.txt" />
      <None Include="Assets\Plays\Routes\MHitchR.txt" />
+     <None Include="Assets\PLAYART_CREATION\Formations\1-1_Trips.txt" />
      <None Include="Assets\Settings\Settings.txt" />
      <None Include="Assets\FILE_IO\OffensivePlays\1-0_Scissors.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Smash_01.txt" />
@@ -277,6 +279,7 @@
      <None Include="Assets\Plays\EditorCreatedPlays\TESTINGBABY.txt" />
      <None Include="Assets\FILE_IO\OffensivePlays\1-2_Spacing.txt" />
      <None Include="Assets\Plays\Routes\WeirdCross.txt" />
+     <None Include="Assets\PLAYART_CREATION\OffensivePlays\1-2_Spacing.txt" />
      <None Include="Assets\FILE_IO\Routes\DeepPost.txt" />
      <None Include="Assets\Scripts\DT_Types\SO_Vec3.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Testd.txt" />
@@ -294,14 +297,18 @@
      <None Include="Assets\FILE_IO\PocketPasser\EASY.txt" />
      <None Include="Assets\Plays\Routes\FlatL.txt" />
      <None Include="Assets\Plays\Routes\BSlantL.txt" />
+     <None Include="Assets\PLAYART_CREATION\OffensivePlays\1-1_ModifiedSmash.txt" />
      <None Include="Assets\FILE_IO\Routes\DeepSlant.txt" />
      <None Include="Assets\Plays\Routes\ZagR.txt" />
      <None Include="Assets\FILE_IO\PocketPasser\PETERMAN.txt" />
      <None Include="Assets\Plays\Routes\Go.txt" />
+     <None Include="Assets\PLAYART_CREATION\OffensivePlays\1-2_SkinnyPost.txt" />
      <None Include="Assets\FILE_IO\Formations\1-1_Trips.txt" />
      <None Include="Assets\FILE_IO\PitchAndCatch\EASY2.txt" />
+     <None Include="Assets\PLAYART_CREATION\Formations\2-0_Default.txt" />
      <None Include="Assets\FILE_IO\Routes\MidPost.txt" />
      <None Include="Assets\FILE_IO\OffensivePlays\1-1_ModifiedSmash.txt" />
+     <None Include="Assets\PLAYART_CREATION\Formations\1-2_Wide.txt" />
      <None Include="Assets\FILE_IO\Routes\MidIn.txt" />
      <None Include="Assets\FILE_IO\Routes\MidOut.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Stick_02.txt" />
@@ -313,6 +320,7 @@
      <None Include="Assets\RoutesText\routes.txt" />
      <None Include="Assets\FILE_IO\Routes\DeepCorner.txt" />
      <None Include="Assets\FILE_IO\OffensivePlays\1-2_DeepSeam.txt" />
+     <None Include="Assets\PLAYART_CREATION\OffensivePlays\1-1_DumbPlay.txt" />
      <None Include="Assets\Plays\Routes\DCrossL.txt" />
      <None Include="Assets\FILE_IO\OffensivePlays\1-2_TestSave.txt" />
      <None Include="Assets\ZonesText\zones.txt" />
@@ -320,6 +328,7 @@
      <None Include="Assets\Plays\EditorCreatedPlays\Rando_01.txt" />
      <None Include="Assets\FILE_IO\OffensivePlays\1-1_Smash.txt" />
      <None Include="Assets\FILE_IO\OffensivePlays\Default.txt" />
+     <None Include="Assets\PLAYART_CREATION\OffensivePlays\1-1_Smash.txt" />
      <None Include="Assets\FILE_IO\OffensivePlays\1-1_Sail.txt" />
      <None Include="Assets\FILE_IO\Formations\1-2_Wide.txt" />
      <None Include="Assets\FILE_IO\Routes\DeepHitch.txt" />
@@ -329,13 +338,20 @@
      <None Include="Assets\Plays\EditorCreatedPlays\RandoPlay.txt" />
      <None Include="Assets\Plays\Routes\BSlantR.txt" />
      <None Include="Assets\FILE_IO\Routes\DeepIn.txt" />
+     <None Include="Assets\PLAYART_CREATION\OffensivePlays\1-1_DeepCrossers.txt" />
+     <None Include="Assets\PLAYART_CREATION\OffensivePlays\1-0_Scissors.txt" />
      <None Include="Assets\FILE_IO\Routes\ShortHitch.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\temptla.txt" />
+     <None Include="Assets\PLAYART_CREATION\OffensivePlays\1-2_Sail.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Testasdlkfj.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TESTINGWhatevs.txt" />
      <None Include="Assets\FILE_IO\PocketPasser\HARD.txt" />
      <None Include="Assets\FILE_IO\OffensivePlays\Sail.txt" />
+     <None Include="Assets\PLAYART_CREATION\OffensivePlays\1-2_DeepSeam.txt" />
      <None Include="Assets\FILE_IO\GamerInfo\info.txt" />
+     <None Include="Assets\PLAYART_CREATION\OffensivePlays\Sail.txt" />
+     <None Include="Assets\PLAYART_CREATION\Formations\1-0_Default.txt" />
+     <None Include="Assets\PLAYART_CREATION\Formations\Default.txt" />
      <None Include="Assets\Plays\Routes\PostR.txt" />
      <None Include="Assets\FILE_IO\OffensivePlays\1-1_DumbPlay.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Stick_03.txt" />
@@ -344,6 +360,7 @@
      <None Include="Assets\FILE_IO\PitchAndCatch\EASY4.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\adsfdas.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Smash2.txt" />
+     <None Include="Assets\PLAYART_CREATION\OffensivePlays\Default.txt" />
      <None Include="Assets\Plays\Routes\SeamR.txt" />
      <None Include="Assets\Plays\Routes\OutL.txt" />
      <None Include="Assets\FILE_IO\Routes\DeepHook.txt" />
@@ -355,6 +372,7 @@
      <None Include="Assets\FILE_IO\Routes\ShortFlat.txt" />
      <None Include="Assets\Plays\Routes\DCrossR.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\HB_Wheel.txt" />
+     <None Include="Assets\PLAYART_CREATION\Formations\1-1_Default.txt" />
      <None Include="Assets\Plays\Routes\Flat.txt" />
      <None Include="Assets\FILE_IO\Routes\MidOutUp.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\HulkSmash.txt" />
