--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -168,6 +168,7 @@
      <Compile Include="Assets\Scripts\PP\PP_Trophy.cs" />
      <Compile Include="Assets\Scripts\PP\PP_Turret.cs" />
      <Compile Include="Assets\Scripts\PP\PP_UI.cs" />
+     <Compile Include="Assets\Scripts\Prac_Offense\AN_OffPlayer.cs" />
      <Compile Include="Assets\Scripts\Prac_Offense\PRAC_Off_Man.cs" />
      <Compile Include="Assets\Scripts\Prac_Offense\PRAC_Off_Ply.cs" />
      <Compile Include="Assets\Scripts\Prac_Offense\PRAC_Off_SetupPlayers.cs" />
